apps/vikunja/vikunja.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vikunja
  namespace: vikunja
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: vikunja
  template:
    metadata:
      labels:
        app: vikunja
    spec:
      securityContext:
        fsGroup: 0
      containers:
      - name: vikunja
        image: vikunja/vikunja:latest
        securityContext:
          runAsUser: 0
        ports:
        - containerPort: 3456
        volumeMounts:
        - name: files
          mountPath: /app/vikunja/files
      volumes:
      - name: files
        persistentVolumeClaim:
          claimName: vikunja-files-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: vikunja
  namespace: vikunja
spec:
  selector:
    app: vikunja
  ports:
  - port: 3456
    targetPort: 3456
