apps/vikunja/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vikunja
  namespace: vikunja
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
  - host: vikunja.massivehog.win
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vikunja
            port:
              number: 3456
  tls:
  - hosts:
    - vikunja.massivehog.win
    secretName: vikunja-tls
